--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
@@ -24,6 +24,7 @@
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-router": "~3.5.23",
@@ -41,7 +42,7 @@
     "react-native": "0.74.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-mmkv": "^3.1.0",
+    "react-native-mmkv": "^2.12.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.10.5",
